gccida/c2/gen_move_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/optabs.c:4406:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/optabs.c:4417:69: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( optab_table[30]->handlers[v2].insn_code != CODE_FOR_nothing || mode_class_0[v2] != MODE_CC ) 
                                                                    ^~~~~~~~~~~~
                                                                    mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/optabs.c:4466:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
return insn_data_0[optab_table[30]->handlers[v3].insn_code].genfun( v8, v10); 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/optabs.c:4466:67: error: called object type '<dependent type>' is not a function or function pointer
return insn_data_0[optab_table[30]->handlers[v3].insn_code].genfun( v8, v10); 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/optabs.c:4475:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
return insn_data_0[optab_table[30]->handlers[v3].insn_code].genfun( v8, v10); 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/optabs.c:4475:67: error: called object type '<dependent type>' is not a function or function pointer
return insn_data_0[optab_table[30]->handlers[v3].insn_code].genfun( v8, v10); 
                                                                  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_move_insn/src/obj/optabs.o] Error 1
